--- a/LazyMessages/app/src/main/res/layout/create_message.xml
+++ b/LazyMessages/app/src/main/res/layout/create_message.xml
@@ -96,6 +96,7 @@
         android:layout_marginTop="52dp"
         android:gravity="center"
         android:text="Titre :"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +108,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Destinataire :"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -120,6 +122,7 @@
         android:layout_marginTop="32dp"
         android:gravity="center"
         android:text="Message :"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,6 +134,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Date :"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
