--- a/LazyMessages/app/src/main/res/layout/item_mail_list.xml
+++ b/LazyMessages/app/src/main/res/layout/item_mail_list.xml
@@ -11,7 +11,7 @@
         android:layout_width="250dp"
         android:layout_height="23dp"
         android:layout_marginTop="16dp"
-        android:text="Titre"
+        android:text="Objet"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.099"
