--- a/LazyMessages/app/src/main/res/layout/activity_main.xml
+++ b/LazyMessages/app/src/main/res/layout/activity_main.xml
@@ -50,11 +50,12 @@
         android:id="@+id/logo"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:layout_marginTop="196dp"
+        app:layout_constraintBottom_toTopOf="@+id/createmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.093"
         app:srcCompat="@drawable/logo" />
 
     <Button
