--- a/LazyMessages/app/src/main/res/layout/detail_mail.xml
+++ b/LazyMessages/app/src/main/res/layout/detail_mail.xml
@@ -72,10 +72,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Message"
-
         android:background="@color/cardview_shadow_start_color"
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />
@@ -95,7 +93,7 @@
 
     <TextView
         android:id="@+id/date"
-        android:layout_width="52dp"
+        android:layout_width="wrap_content"
         android:layout_height="17dp"
         android:layout_marginTop="20dp"
         android:text="Date"
