--- a/LazyMessages/app/src/main/res/layout/create_mail.xml
+++ b/LazyMessages/app/src/main/res/layout/create_mail.xml
@@ -13,10 +13,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#cb8043"
         android:ems="10"
-        android:hint="..."
         android:gravity="center"
+        android:hint="..."
         android:inputType="textEmailSubject"
+        android:minHeight="48dp"
+        android:textColor="@color/black"
+        android:textColorHighlight="#cb8043"
+        android:textColorLink="#cb8043"
+        android:textCursorDrawable="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,10 +34,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:autofillHints="phone num"
+        android:backgroundTint="#cb8043"
         android:ems="10"
-        android:hint="ex: abcdef@gmail.com"
         android:gravity="center"
+        android:hint="ex: abcdef@gmail.com"
         android:inputType="textEmailAddress"
+        android:minHeight="48dp"
+        android:textColor="@color/black"
+        android:textColorHighlight="#cb8043"
+        android:textColorLink="#cb8043"
+        android:textCursorDrawable="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,10 +54,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#cb8043"
         android:ems="10"
-        android:hint="..."
         android:gravity="center"
+        android:hint="..."
         android:inputType="text"
+        android:minHeight="48dp"
+        android:textColor="@color/black"
+        android:textColorHighlight="#cb8043"
+        android:textColorLink="#cb8043"
+        android:textCursorDrawable="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,8 +75,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="ex: 01/01/2022 08:25"
         android:gravity="center"
+        android:hint="ex: 01/01/2022 08:25"
+        android:textColorHighlight="#cb8043"
+        android:textColorLink="#cb8043"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,10 +141,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Créer"
-
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDate"
         app:layout_constraintVertical_bias="0.346" />
