--- a/LazyMessages/app/src/main/res/layout/detail_mail.xml
+++ b/LazyMessages/app/src/main/res/layout/detail_mail.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <TextView
         android:id="@+id/textViewTitre"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:textColor="@color/white"
         android:layout_marginTop="52dp"
         android:text="Objet :"
         android:textStyle="bold"
@@ -32,8 +33,10 @@
 
     <TextView
         android:id="@+id/textViewDestinataire"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:textColor="@color/white"
         android:layout_marginTop="32dp"
         android:text="Destinataire :"
         android:textStyle="bold"
@@ -56,8 +59,10 @@
 
     <TextView
         android:id="@+id/textViewMessage"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:textColor="@color/white"
         android:layout_marginTop="32dp"
         android:text="Contenu :"
         android:textStyle="bold"
@@ -68,20 +73,20 @@
 
     <TextView
         android:id="@+id/message"
-        android:layout_width="250dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Message"
-        android:background="@color/cardview_shadow_start_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />
 
     <TextView
         android:id="@+id/textViewDate"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:textColor="@color/white"
         android:layout_marginTop="32dp"
         android:text="Date :"
         android:textStyle="bold"
@@ -102,30 +107,5 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
-
-    <TextView
-        android:id="@+id/textViewRecurrence"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Récurrence :"
-        android:textStyle="bold"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
-
-    <TextView
-        android:id="@+id/recuerence"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Recurrence"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewRecurrence" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
