--- a/LazyMessages/app/src/main/res/layout/item_mail_list.xml
+++ b/LazyMessages/app/src/main/res/layout/item_mail_list.xml
@@ -19,11 +19,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/recurrence"
+        android:id="@+id/date"
         android:layout_width="250dp"
         android:layout_height="23dp"
         android:layout_marginTop="4dp"
-        android:text="Recurrence"
+        android:text="Date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.099"
         app:layout_constraintStart_toStartOf="parent"
