--- a/LazyMessages/app/src/main/res/layout/create_mail.xml
+++ b/LazyMessages/app/src/main/res/layout/create_mail.xml
@@ -79,6 +79,7 @@
         android:hint="ex: 01/01/2022 08:25"
         android:textColorHighlight="#cb8043"
         android:textColorLink="#cb8043"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
